# teaching-assistant-bot

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-deploy.txt
.github/workflows/: eval.yml
data/eval/: eval_results.json  golden_dataset.json  golden_maths.json  harness_results.json
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Auth.tsx  Chat.tsx  ClassPicker.tsx  Mascot.tsx
frontend/lib/: api.ts  supabase.ts
src/: pipeline.py
src/api/: main.py
src/config/: prompts.yaml  settings.py
src/evaluation/: evaluate.py  harness.py
src/generation/: citation_checker.py  generator.py  llm_client.py
src/ingestion/: chunker.py  clean.py  embedder.py  embeddings.py  loader.py  qdrant_ingest.py
src/retrieval/: bm25_retriever.py  hybrid_retriever.py  qdrant_store.py  reranker.py  vector_retriever.py
tests/: test_chunker.py
