[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teaching-assistant-bot"
version = "0.1.0"
description = "Production-grade RAG teaching assistant with hybrid retrieval, reranking, and citation enforcement"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-cohere>=0.3.0",
    "langchain-weaviate>=0.0.6",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "weaviate-client>=4.9.0",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "openai>=1.50.0",
    "cohere>=5.0.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
]